[package]
name = "kilo_in_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termios = "0.3.3"
libc = "0.2.138"
scanf = "1.2.1"
ioctl-rs = "0.2.0"
rustix = {version = "0.36.5", features = ["termios"]}